<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempo">Hoje - Domingo - 22º </string>
    <string name="refresh">Atualizar</string>
    <string name="chave_api_tempo" translatable="false">427f62014a9ec86f4d52844e57f5cefd</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Configurações</string>
    <string name="select_location_of_map">Localizao do mapa</string>
    <string name="share">Compartilhar</string>

    <string name="title_activity_detail2">DetailActivity2</string>

    <string name="navigation_drawer_open">Abrir mapa</string>
    <string name="navigation_drawer_close">Fechar mapa</string>
    <string name="title_activity_detail_actvity">Detalhes do tempo</string>
    <string name="pref_location_label">Localização</string>

    <string name="pref_location_key" translatable="false">localizacao</string>
    <string name="pref_location_default" translatable="false">94043</string>


    <string name="pref_units_label">Unidade de temperatura</string>
    <string name="pref_units_label_metric">Métrico</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="menu_item_share">menu item share</string>

    <string name="content_authority" translatable="false">em.android.sunshine</string>
    <string name="sync_account_type">sunshine.android.em</string>

    <!--Days of week-->
    <string name="Sunday">Domingo</string>
    <string name="Monday">Segunda - Feira</string>
    <string name="Tuesday">Terça - Feira</string>
    <string name="Wednesday">Quarta - Feira</string>
    <string name="Thursday">Quinta - Feira</string>
    <string name="Friday">Sexta - Feira</string>
    <string name="Saturday">Sabado</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Hoje </string>
    <string name="clear">Claro</string>

    <!-- texto para amanha [CHAR LIMIT=20] -->
    <string name="tomorrow" translatable="true">Amanhã</string>

    <!-- formatacao da data para o nome do dia da semana (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Vento in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressão format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidade format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <string name="format_notification">
    Tempo: <xliff:g id="condition">%1$s</xliff:g> Max: <xliff:g id="high">%2$s</xliff:g> Min: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- preferencias de notificaçao-->
    <string name="pref_last_notification">ultima_notificacao</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notificações de previsão do tempo</string>
    <string name="pref_enable_notifications_true">Ativado</string>
    <string name="pref_enable_notifications_false">Não ativado</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="simulacao_maxima">24º</string>
    <string name="simulacao_minima">8º</string>
    <string name="texto_condicao_tempo">ícone de condição de tempo</string>
    <string name="simulacao_pressao">Pressao</string>
    <string name="simulacao_umidade">Umidade</string>
    <string name="simulacao_vento">Vento</string>
    <string name="_20_de_outubro">20 de outubro</string>
    <string name="sem_dados">Não há dados a serem exibidos.</string>
    <string name="empty_forecast_list_no_network">Verifique a conexão com a rede</string>
    <string name="pref_location_status_key">loc-status</string>
    <string name="empty_forecast_list_server_down">Falha de conexão com o servidor</string>
    <string name="empty_forecast_list_server_error">Erro do servidor</string>
    <string name="nome_da_cidade">Belo Horizonte</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>


    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_label">Pacote de ícones</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Coloridos</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="icone_condicao_de_tempo">ícone condicao de tempo</string>
    <string name="empty_forecast_list_invalid_location">Localização inválida</string>
    <string name="empty_forecast_list">Sem dados</string>
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="pref_current_location_desc">Use minha localização</string>
    <string name="gcm_defaultSenderId" />

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude" translatable="false">loc-longitude</string>

    <string name="attribution_text">Powered by Google</string>

    <string name="muzei_description">O tempo hoje</string>

</resources>

