<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="DisableBaselineAlignment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_20_de_outubro" />

            <TextView
                android:id="@+id/list_item_high_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/simulacao_minima" />

            <TextView
                android:id="@+id/list_item_low_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/simulacao_maxima" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/list_item_icon"
                android:layout_width="119dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/texto_condicao_tempo"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/list_item_forecast_textview"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/clear" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>