<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.Space
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        tools:targetApi="lollipop" />

    <!-- Header: Day, Date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/detail_day_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:text="@string/today"
            android:textAlignment="center"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>
    <!-- Main content: high, low, art, weather state -->
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/detail_high_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/simulacao_maxima"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/detail_low_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/simulacao_minima"
                android:textSize="30sp"
                android:textAlignment="center" />


        </LinearLayout>



        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:cropToPadding="false"
                android:adjustViewBounds="true"
                android:contentDescription="@string/texto_condicao_tempo" />

            <TextView
                android:id="@+id/detail_forecast_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/clear"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.Space
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        tools:targetApi="lollipop" />

</GridLayout>